# stm32f4-thrift

./: .gitignore  CMakeLists.txt  README.md
lib/thrift-nano/: config.h  protocol.c
src/: main.c  stm32f4xx_conf.h  system_stm32f4xx.c  usb_transport.c  usb_transport.h
