SET(STM32_CHIP $ENV{STM32_CHIP})
SET(STM32_FLASH_SIZE $ENV{STM32_FLASH_SIZE})
SET(STM32_RAM_SIZE $ENV{STM32_RAM_SIZE})
SET(CMAKE_TOOLCHAIN_FILE $ENV{CMAKE_TOOLCHAIN_FILE})
SET(CMAKE_MODULE_PATH $ENV{CMAKE_MODULE_PATH}) 
SET(TOOLCHAIN_PREFIX $ENV{TOOLCHAIN_PREFIX})
SET(CMAKE_INSTALL_PREFIX $ENV{CMAKE_INSTALL_PREFIX})
SET(STM32_MIN_HEAP_SIZE 4K)
ADD_DEFINITIONS("-D\"assert_param(expr)\"=\"((void)0)\"")

include(ExternalProject)

PROJECT(stm32-thrift)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
ENABLE_LANGUAGE(ASM)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/lib
	${CMAKE_CURRENT_SOURCE_DIR}/lib/cmsis
	${CMAKE_CURRENT_SOURCE_DIR}/lib/stdperiph
	${CMAKE_CURRENT_SOURCE_DIR}/lib/usbd
	${CMAKE_CURRENT_SOURCE_DIR}/lib/thrift-nano
	${CMAKE_CURRENT_SOURCE_DIR}/lib/gen-c_nano
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

FILE(GLOB STARTUP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/*.s)
FILE(GLOB CMSIS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/cmsis/*.c)
FILE(GLOB CMSIS_HDR ${CMAKE_CURRENT_SOURCE_DIR}/lib/cmsis/*.h)
FILE(GLOB STDPERIPH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/stdperiph/*.c)
FILE(GLOB STDPERIPH_HDR ${CMAKE_CURRENT_SOURCE_DIR}/lib/stdperiph/*.h)
FILE(GLOB USB_CDC_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/usbd/*.c)
FILE(GLOB USB_CDC_HDR ${CMAKE_CURRENT_SOURCE_DIR}/lib/usbd/*.h)
FILE(GLOB THRIFT_NANO_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/thrift-nano/*.c)
FILE(GLOB THRIFT_NANO_HDR ${CMAKE_CURRENT_SOURCE_DIR}/lib/thrift-nano/*.h)
FILE(GLOB GEN_NANO_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/gen-c_nano/*.c)
FILE(GLOB GEN_NANO_HDR ${CMAKE_CURRENT_SOURCE_DIR}/lib/gen-c_nano/*.h)

SET(PROJECT_SOURCES
	src/main.c
	src/stm32f4xx_it.c
	src/syscalls.c
	src/usb_bsp.c
	src/usbd_cdc_vcp.c
	src/usbd_desc.c
	src/usbd_usr.c
	src/usb_transport.c
	src/system_stm32f4xx.c
	${CMSIS_SRC}
	${STDPERIPH_SRC}
	${USB_CDC_SRC}
	${THRIFT_NANO_SRC}
	${GEN_NANO_SRC}
	${STARTUP_SRC}
)

SET(STM32_LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/stm32_flash.ld)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
